--- a/ProyectoInge1/ProyectoInge1/Views/GestCambios/Details.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/GestCambios/Details.cshtml
@@ -341,10 +341,10 @@ $(document).ready(function(){
                         @Html.ValidationMessageFor(model => model.Solicitud.sprintRF, "", new { @class = "text-danger" })
                     </div>
                     <div class="form-group">
-                        <div class="col-md-6">
-                            <label class="control-label col-md-2">Guardar Imagen:</label>
+                        
+                            <label class="control-label col-md-2">Guardar Imagen</label>
                             <input type="file" id="image1" name="imagen1" />
-                        </div><br /> <br />
+                        <br /> <br />
                     </div>
                 </fieldset>
                 @*Almacenar datos diversos*@
