--- a/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Index.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Index.cshtml
@@ -78,9 +78,8 @@
 
 <br />
 Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+@Html.PagedListPager(Model, page => Url.Action("Index", new { page, nombreProyecto = Request.Params["nombreProyecto"] }))
 
-@Html.PagedListPager(Model, page => Url.Action("Index",
-    new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
 
 <script>
     function gotoDetails2(element) {
