--- a/ProyectoInge1/ProyectoInge1/Views/Proyectos/Create.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Proyectos/Create.cshtml
@@ -9,13 +9,13 @@
 @Styles.Render("~/Content/datepicker")
 @Scripts.Render("~/bundles/datePicker")
 
-<h2>Create</h2>
+<h2>Proyecto</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     <div class="form-horizontal">
-        <h4>Proyecto</h4>
+        <h4>Crear Proyecto</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -59,16 +59,16 @@
         </div>
         <br />
         <div class="form-group">
+            <label class="control-label col-md-2">* Cliente:</label>
+            <div class="col-md-10" style="padding-top:0.5em;">
+                @Html.DropDownListFor(model => model.proyecto.Cliente, new SelectList(ViewBag.Usuarios, "cedula", "names"), "Seleccionar Cliente", new { @class = "control-label col-md-2" });
+            </div>
+        </div>
+        <div class="form-group">
             <label class="control-label col-md-2">* Lider:</label>
             <div class="col-md-10" style="padding-top:0.5em;">
                 @* @Html.DropDownListFor(model => model.proyecto.lider, new SelectList(ViewBag.Desarrolladores, "cedula", "names" ), "Seleccionar Lider", new { @id = "liderDD", @class = "control-label col-md-2"} );*@
                 @Html.ListBox("liderValue", (SelectList)ViewBag.Leader, new { @class = "form-control", @style = "height: 33px;", @readonly = true })
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="control-label col-md-2">* Cliente:</label>
-            <div class="col-md-10" style="padding-top:0.5em;">
-                @Html.DropDownListFor(model => model.proyecto.Cliente, new SelectList(ViewBag.Usuarios, "cedula", "names"), "Seleccionar Cliente", new { @class = "control-label col-md-2" });
             </div>
         </div>
         <br /><br />
