--- a/ProyectoInge1/ProyectoInge1/Views/GestCambios/Index.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/GestCambios/Index.cshtml
@@ -104,6 +104,15 @@ Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.Page
 @Html.PagedListPager(Model, page => Url.Action("Index",
     new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
 
-<script src="../../Scripts/jquery_Usuarios.js"></script>
+<script>
+    function gotoVersionDetails(element) {
+        var elementId = element.id;
+        //alert(window.location.href);
+        window.location.replace('../GestCambios/Details_Hist/' + elementId)
+        // window.location.replace('GestCambios/Detalles/' + elementId)
+
+    }
+</script>
+
 
 
