--- a/ProyectoInge1/ProyectoInge1/Views/GestCambios/Details_Hist.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/GestCambios/Details_Hist.cshtml
@@ -107,9 +107,16 @@
         @Html.EditorFor(model => model.versionReq.sprintRF, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
         @Html.ValidationMessageFor(model => model.versionReq.sprintRF, "", new { @class = "text-danger" })
     </div>
+    @*Razon, no editable*@
+    <div class="col-lg-6 ">
+        @Html.LabelFor(model => model.versionReq.razon, "Razon", htmlAttributes: new { @class = "control-label col-md-3" })
+        @Html.TextAreaFor(model => model.versionReq.razon, new { @class = "form-control", rows = 4, @readonly = true })
+        @Html.ValidationMessageFor(model => model.versionReq.razon, "", new { @class = "text-danger" })
+    </div>
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
+            <br /><br />
             <button type="submit" onclick="volver()" class="btn btn-primary">Volver</button>
         </div>
 
