--- a/ProyectoInge1/ProyectoInge1/Views/GestCambios/Index.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/GestCambios/Index.cshtml
@@ -18,7 +18,7 @@
         <div class="row">
 
             <div class="col-lg-4">
-                <label class="control-label col-md-4">Proyectos:</label>
+                <label class="control-label ">Proyectos:</label>
                 @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
                 <input class="btn btn-success" type="submit" value="Buscar" />
             </div>
@@ -28,7 +28,7 @@
             </div>
 
             <div class="col-lg-1 col-lg-push-4">
-                <a class="btn btn-info" href="../GestCambios/Solicitudes">Solicitudes</a>
+                <a class="btn btn-info"  href="../GestCambios/Solicitudes">Solicitudes</a>
             </div>
         </div>
     </p>
