--- a/ProyectoInge1/ProyectoInge1/Views/GestCambios/Create.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/GestCambios/Create.cshtml
@@ -134,7 +134,7 @@
         @*Realizado*@
         <div class="col-lg-6 ">
             @Html.LabelFor(model => model.Solicitud.realizadoPor, "Solicitante", htmlAttributes: new { @class = "control-label col-md-3" })
-            @Html.DropDownListFor(model => model.Solicitud.realizadoPor,(SelectList)ViewBag.desarrolladores,"- Solicitante -", new { htmlAttributes = new { @class = "form-control" } })
+            @Html.DropDownListFor(model => model.Solicitud.realizadoPor,(SelectList)ViewBag.desarrolladores,"- Solicitante -", new { htmlAttributes = new { @class = "dropdown" } })
             @Html.ValidationMessageFor(model => model.Solicitud.realizadoPor, " ", new { @class = "text-danger" })
 
         </div>
@@ -162,11 +162,6 @@
             @Html.ValidationMessageFor(model => model.Solicitud.razon, "", new { @class = "text-danger" })
 
         </div>
-        
-       
-        
-        
-        
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-5">
