--- a/ProyectoInge1/ProyectoInge1/Views/Proyectos/Detalles.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Proyectos/Detalles.cshtml
@@ -84,41 +84,37 @@
         {
 
             @*Nombre Detalles*@
-            <div class="col-lg-6 ">
-                @Html.LabelFor(model => model.proyecto.nombre, htmlAttributes: new { @class = "control-label" })<br />
+            <div class="col-lg-12 ">
+                @Html.LabelFor(model => model.proyecto.nombre, htmlAttributes: new { @class = "control-label" })
                 <div style="width:25em;">
                     @Html.DisplayFor(model => model.proyecto.nombre)
                 </div>
             </div>
 
                 @*Fecha Inicio Detalles*@
-                <div class="col-lg-6">
+                <div class="col-lg-12">
                     @Html.LabelFor(model => model.proyecto.fechaInicio, htmlAttributes: new { @class = "control-label" })
-                    <br />
                     <div style="width:25em;">
                         @Html.DisplayFor(model => model.proyecto.fechaInicio, "{0:dd/MM/yyyy}")
                     </div>
                 </div>
                 @*Fecha Final Detalles*@
-                <div class="col-lg-6 form-group">
-                    <div class="col-lg-5 col-lg-pull-1">
-                        @Html.LabelFor(model => model.proyecto.fechaFinal, htmlAttributes: new { @class = "control-label" })
-                    </div><br />
-                    <div class="col-lg-4 col-lg-pull-1 " style="width:25em;">
+                <div class="col-lg-12">                    
+                    @Html.LabelFor(model => model.proyecto.fechaFinal, htmlAttributes: new { @class = "control-label" })
+                    <div style="width:25em;">
                         @Html.DisplayFor(model => model.proyecto.fechaFinal, "{0:dd/MM/yyyy}")
                     </div>
                 </div>
                 @*Descripcion Detalles*@
-                <div class="col-lg-6 form-group">
-                    <div class="col-lg-2 col-lg-pull-1">
-                        @Html.LabelFor(model => model.proyecto.descripcion, htmlAttributes: new { @class = "control-label" })
-                    </div><br />
-                    <div class="col-lg-4 col-lg-pull-3 " style="width:25em; margin-top:0.5em;">
+                <div class="col-lg-12">
+                    @Html.LabelFor(model => model.proyecto.descripcion, htmlAttributes: new { @class = "control-label" })
+                    <br />
+                    <div style="width:25em; margin-top:0.5em;">
                         @Html.DisplayFor(model => model.proyecto.descripcion)
                     </div>
                 </div>
                     @*Lider Detalles*@
-                    <div class="col-lg-6 ">
+                    <div class="col-lg-12 ">
                         @Html.LabelFor(model => model.proyecto.lider, htmlAttributes: new { @class = "control-label" })
                         <br />
                         <div style="width:25em; ">
@@ -137,65 +133,62 @@
                         </div>
                     </div>
                     @*Cliente Detalles*@
-                                <div class="col-lg-5 col-lg-pull-1" style="margin-left:3.5em;">
-                                    @Html.LabelFor(model => model.proyecto.Cliente, htmlAttributes: new { @class = "control-label" })<br />
-                                    @{
-                                        var idUsr = Model.proyecto.Cliente;
-                                        var usersList = Model.listaUsuarios;
-                                        foreach (var user in usersList)
-                                        {
-                                            if (user.cedula.Equals(idUsr))
+                    <div class="col-lg-12" >
+                        @Html.LabelFor(model => model.proyecto.Cliente, htmlAttributes: new { @class = "control-label" })<br />
+                        @{
+                            var idUsr = Model.proyecto.Cliente;
+                            var usersList = Model.listaUsuarios;
+                            foreach (var user in usersList)
+                            {
+                                if (user.cedula.Equals(idUsr))
+                                {
+                                    var cliente = user.nombre + " " + user.apellidos;
+                                    @Html.DisplayFor(modelItem => cliente);
+                                }
+                            }
+                        }
+                    </div>
+                                
+                    @*Estado Detalles*@
+                    <div class="col-lg-12 form-group" style="margin-left:0em;">
+                        @Html.LabelFor(model => model.proyecto.estado, htmlAttributes: new { @class = "control-label" })<br />
+                        @Html.DisplayFor(model => model.proyecto.estado)
+                    </div>
+                                
+                    
+                    @*Miembros Detalles*@
+                            <div class="col-lg-12">
+                                 @Html.LabelFor(model => model.proyecto.Usuario2, htmlAttributes: new { @class = "control-label " })<br />
+                                <div style="width:25em;">
+                                    <select class="form-control " style="width:20em;" id="d" size="4">
+                                        @{
+                                            var UserProyectList = Model.listaUsuariosProyecto;
+                                            var UserList = Model.listaUsuarios;
+                                            if (UserProyectList != null)
                                             {
-                                                var cliente = user.nombre + " " + user.apellidos;
-                                                @Html.DisplayFor(modelItem => cliente);
-                                            }
-                                        }
-                                    }
-                                </div>
-                                <div class="col-lg-6">
-                                    @*Estado Detalles*@
-                                    <div class="form-group" style="margin-left:0em;">
-                                        @Html.LabelFor(model => model.proyecto.estado, htmlAttributes: new { @class = "control-label" })<br />
-                                        @Html.DisplayFor(model => model.proyecto.estado)
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    @*Usuarios Detalles*@
-                                    <div class="form-group">
-                                        <div class="col-lg-5 col-lg-pull-1 ">
-                                            @Html.LabelFor(model => model.proyecto.Usuario2, htmlAttributes: new { @class = "control-label " })<br />
-                                        </div><br /><br />
-                                        <div class="col-lg-4 col-lg-pull-1">
-                                            <select class="form-control " style="width:20em;" id="d" size="4">
-                                                @{
-                                                    var UserProyectList = Model.listaUsuariosProyecto;
-                                                    var UserList = Model.listaUsuarios;
-                                                    if (UserProyectList != null)
+                                                foreach (var userProj in UserProyectList)
+                                                {
+                                                    foreach (var user in UserList)
                                                     {
-                                                        foreach (var userProj in UserProyectList)
+                                                        if (userProj.cedula.Equals(user.cedula))
                                                         {
-                                                            foreach (var user in UserList)
-                                                            {
-                                                                if (userProj.cedula.Equals(user.cedula))
-                                                                {
-                                                                    <option value=user.cedula>
-                                                                        @Html.DisplayFor(modelItem => user.nombre)
-                                                                        @Html.DisplayFor(modelItem => user.apellidos)
-                                                                        @Html.Raw(" ")
-                                                                    </option>
-                                                                }
-                                                            }
+                                                            <option value=user.cedula>
+                                                                @Html.DisplayFor(modelItem => user.nombre)
+                                                                @Html.DisplayFor(modelItem => user.apellidos)
+                                                                @Html.Raw(" ")
+                                                            </option>
                                                         }
                                                     }
                                                 }
-                                            </select>
-                                        </div>
-                                    </div>
-                                </div><br /><br /><br />
-                                <div class="col-lg-1 btn btn-default">
-                                    @Html.ActionLink("Volver", "Index")
+                                            }
+                                        }
+                                    </select>
                                 </div>
-                                                    }
+                            </div><br /><br /><br />
+                    <div class="col-lg-1 btn btn-default">
+                        @Html.ActionLink("Volver", "Index")
+                    </div><br/>
+          }
     </div>
     @*------------------------------------------------------Modificar detalles---------------------------------------*@
     @using (Html.BeginForm())
