--- a/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Details.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Details.cshtml
@@ -18,15 +18,13 @@
             <dl class="dl-horizontal">
                 <br>
                 <br>
+                <div>
+                    @Html.HiddenFor(model => model.Requerimiento.id, new { htmlAttributes = new { @class = "form-control" } })
+                </div>
                 <div class="form-group">
                     @Html.LabelFor(model => model.Requerimiento.nomProyecto, htmlAttributes: new { @class = "control-label col-md-2" })
                     @Html.EditorFor(model => model.Requerimiento.nomProyecto, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
                     @Html.ValidationMessageFor(model => model.Requerimiento.nomProyecto, "", new { @class = "text-danger" })
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Requerimiento.id, htmlAttributes: new { @class = "control-label col-md-2" })
-                    @Html.EditorFor(model => model.Requerimiento.id, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
-                    @Html.ValidationMessageFor(model => model.Requerimiento.id, "", new { @class = "text-danger" })
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(model => model.Requerimiento.nombre, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -47,11 +45,11 @@
                     </div>
                     <div class="form-group">
                         @Html.LabelFor(model => model.Requerimiento.fechaInicial, htmlAttributes: new { @class = "control-label col-md-2" })
-                        @Html.TextBoxFor(model => model.Requerimiento.fechaInicial, new { @class = "form-control datepicker", placeholder = "DATE" })
+                        @Html.TextBoxFor(model => model.Requerimiento.fechaInicial, "{0:dd/MM/yyyy}", new { @class = "form-control datepicker"})
                     </div>
                     <div class="form-group">
                         @Html.LabelFor(model => model.Requerimiento.fechaFinal, htmlAttributes: new { @class = "control-label col-md-2" })
-                        @Html.TextBoxFor(model => model.Requerimiento.fechaFinal, new { @class = "form-control datepicker2", placeholder = "DATE" })
+                        @Html.TextBoxFor(model => model.Requerimiento.fechaFinal, "{0:dd/MM/yyyy}", new { @class = "form-control datepicker2" })
                     </div>
                     <div class="form-group">
                         @Html.LabelFor(model => model.Requerimiento.fuente, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -126,9 +124,6 @@
  }
 </div>
 
-
-
-
         @*---------------------------------------Detalles------------------------------------------------*@
         <div class="elementoEditar">
             <div class="form-horizontal">
@@ -141,11 +136,6 @@
                         @Html.LabelFor(model => model.Requerimiento.nomProyecto, htmlAttributes: new { @class = "control-label col-md-2" })
                         @Html.EditorFor(model => model.Requerimiento.nomProyecto, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
                         @Html.ValidationMessageFor(model => model.Requerimiento.nomProyecto, "", new { @class = "text-danger" })
-                    </div>
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Requerimiento.id, htmlAttributes: new { @class = "control-label col-md-2" })
-                        @Html.EditorFor(model => model.Requerimiento.id, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
-                        @Html.ValidationMessageFor(model => model.Requerimiento.id, "", new { @class = "text-danger" })
                     </div>
                     <div class="form-group">
                         @Html.LabelFor(model => model.Requerimiento.nombre, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -333,13 +323,17 @@
 
 <script type="text/javascript">
     $(function () {
-        $('.datepicker, .datepicker2').datepicker("setDate", new Date()); //Initialise any date pickers
-    });
-    $(".datepicker").on("dp.change", function (e) {
-        $('.datepicker2').data("DatePicker").setMinDate(e.date);
-    });
-    $(".datepicker2").on("dp.change", function (e) {
-        $('.datepicker').data("DatePicker").setMaxDate(e.date);
+        $('.datepicker, .datepicker2').datepicker({
+            dateFormat: "dd-mm-yy",
+            autoclose: true,
+            todayHighlight: true,
+        });
+        $(".datepicker").on("dp.change", function (e) {
+            $('.datepicker2').data("DatePicker").setMinDate(e.date);
+        });
+        $(".datepicker2").on("dp.change", function (e) {
+            $('.datepicker').data("DatePicker").setMaxDate(e.date);
+        });
     });
 </script>
     }
